# extraction_ai

./: LABEL_STUDIO_SETUP.md  LLM_Comparison_BankStatementExtraction.md  PRD_Extraction.md  PROJECT_STATUS_2025-07-03.md  SYNTHETIC_PDF_GENERATION.md  SYNTHETIC_PDF_GENERATION_OVERVIEW.md  TRAINING_WORKFLOW_GUIDE.md  pyproject.toml  requirements.txt
Donut/: DONUT_DOCUMENTATION.md  __init__.py  donut_extraction.py  donut_table_extraction.py
LayoutLMv3/: LayoutLmv3_documentation.md  demo_layoutlm_extraction.py  examine_training_data.py  layoutlm.py  layoutlm_finetune.py
MistralOCR/: MISTRAL_OCR_DOCUMENTATION.md  __init__.py  mistral_ocr_extraction.py
Outputs/: ENBD-statements-pdf_donut.jsonl  ENBD-statements-pdf_donut_cord_flat.csv  ENBD-statements-pdf_layoutlm_tokens.csv  ENBD-statements-pdf_mistral.csv  ENBD-statements-pdf_mistral.xlsx  ENBD-statements-pdf_paddleocr.csv  YourBank-Bank Statement Example Final_donut.jsonl  YourBank-Bank Statement Example Final_donut_cord_flat.csv  YourBank-Bank Statement Example Final_layoutlm_tokens.csv  YourBank-Bank Statement Example Final_mistral.csv  YourBank-Bank Statement Example Final_mistral.xlsx  YourBank-Bank Statement Example Final_paddleocr.csv
Paddleocr/: PADDLEOCR_DOCUMENTATION.md  PADDLEOCR_OFFLINE_SETUP.md  paddleocr_extraction.py  paddleocr_test.py  row_parser.py  test_row_parser_against_groundtruth.py
layouts/: axisbank_type_i.json  bankmuscat_type_i.json  bankofindia_type_i.json  bankofmaharashtra_type_i.json  barclays_type_i.json  bisb_type_i.json  bob_type_i.json  canarabank_type_i.json  cbd_type_i.json  (+31 more)
(+261 files in other folders)
